--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,18 @@
         <section class="terceiro">
             <div class="painel">
                 <div class="logo">
-                    <img src="/static/onix.svg" alt="">
+                    <img src="/static/onix.svg" alt="" id="btn_remover" style="cursor: pointer;">
                     <h1>PAINEL DE CARREGAMENTO! </h1>
-                    <img src="/static/socimol.png" alt="">
+                    <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
                 </div>
+
+                <form action="/remover" method="post" id="remover" class="fechar">
+                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
+                    <input type="submit" name="add" style="width: 30px;" value="-">
+                </form>
                
-                <form action="/cadastrar" method="post">
+                <form action="/cadastrar" method="post" id="adicionar" class="fechar">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
                     <input type="text" name="dest" id="dest" placeholder="destino" style="width: 280px;">
@@ -39,7 +45,6 @@
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
                     <input type="submit" name="add" id="add" style="width: 30px;" value="+">
-                    <input type="submit" name="add" id="add" style="width: 30px;" value="-">
                 </form>
                
             </div>
