--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
                 </div>
 
                 <form action="/remover" method="post" id="remover" class="fechar">
-                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
-                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
+                    <input type="text" name="num_carrego" id="num_carrego" placeholder="carrego" style="width: 60px;">
+                    <input type="text" name="fase_carrego" id="fase_carrego" placeholder="fase do carrego" style="width: 100px;">
                     <input type="submit" name="add" style="width: 30px;" value="-">
                 </form>
                
