--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                         <option value="CARREGANDO">CARREGANDO</option>
                         <option value="AGUARD_FAT">AGUARD FAT</option>
                         <option value="FATURANDO">FATURANDO</option>
-                        <option value="CONCLUIDO">CONCLUÍDO</option>
+                        <option value="CONCLUÍDO">CONCLUÍDO</option>
                         <option value="CANCELADO">CANCELADO</option>
                         <option value="ADIADO">ADIADO</option>
                     </select>
