--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,6 @@
 <body>
     
     <main class="table" id="customers_table">
-
         <section class="terceiro">
             <div class="painel">
                 <div class="logo">
@@ -31,18 +30,34 @@
                     <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
                 </div>
 
-                <form action="/remover" method="post" id="remover" class="fechar">
-                    <input type="text" name="num_carrego" id="num_carrego" placeholder="carrego" style="width: 60px;">
-                    <input type="text" name="fase_carrego" id="fase_carrego" placeholder="fase do carrego" style="width: 100px;">
+                <form action="/remover" method="post" id="remover" class="fechar" >
+                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" style="width: 40px;">
+                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;">
+                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 200px;">
+                    <select name="conferente" id="conferente" required style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                        <option value="">--Conferente--</option>
+                        <option value="ARIMATEIA">ARIMATEIA</option>
+                        <option value="CASE">CASE</option>
+                        <option value="CASSIO">CASSIO</option>
+                        <option value="EMERSON">EMERSON</option>
+                        <option value="FERNANDO">FERNANDO</option>
+                        <option value="RAIONE">RAIONE</option>
+                        <option value="FABIO">FABIO</option>
+                        <option value="VICENTE">VICENTE</option>
+                        <option value="ZE_CARLOS">ZE CARLOS</option>
+                    </select>
+                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
+                    <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
                     <select name="opcoes" id="opcoes" required style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
-                        <option value="">--Selecione--</option>
+                        <option value="">--Estatus--</option>
                         <option value="AGUARD">AGUARD</option>
                         <option value="CARREGANDO">CARREGANDO</option>
                         <option value="AGUARD_FAT">AGUARD FAT</option>
                         <option value="FATURANDO">FATURANDO</option>
                         <option value="CONCLUÍDO">CONCLUÍDO</option>
-                        <option value="CANCELADO">CANCELADO</option>
                         <option value="ADIADO">ADIADO</option>
+                        <option value="CANCELADO">CANCELADO</option>
                     </select>
                     <input type="submit" name="add" style="width: 30px;" value="-">
                 </form>
