--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
                 </div>
 
                 <form action="/remover" method="post" id="remover" class="fechar" >
-                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" style="width: 40px;">
-                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
-                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;">
+                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" style="width: 40px;" >
+                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;" value="{{clt}}">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;" >
                     <input type="text" name="dest" id="dest" placeholder="destino" style="width: 200px;">
                     <select name="conferente" id="conferente" required style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
                         <option value="">--Conferente--</option>
