--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;" value="{{clt}}">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;" >
                     <input type="text" name="dest" id="dest" placeholder="destino" style="width: 200px;">
-                    <select name="conferente" id="conferente" required style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                    <select name="conf" id="conf" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
                         <option value="">--Conferente--</option>
                         <option value="ARIMATEIA">ARIMATEIA</option>
                         <option value="CASE">CASE</option>
@@ -49,7 +49,7 @@
                     </select>
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
-                    <select name="opcoes" id="opcoes" required style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                    <select name="opcoes" id="opcoes" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
                         <option value="">--Estatus--</option>
                         <option value="AGUARD">AGUARD</option>
                         <option value="CARREGANDO">CARREGANDO</option>
