--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="painel">
                 <div class="logo">
                     <img src="/static/onix.svg" alt="" id="btn_remover" style="cursor: pointer;">
-                    <h1>PAINEL DE CARREGAMENTO! </h1>
+                    <h1>PAINEL DE CARREGAMENTO</h1>
                     <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
                 </div>
 
