--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
         <section class="terceiro">
             <div class="painel">
                 <div class="logo">
-                    <img src="/static/onix.svg" alt="" id="btn_remover" style="cursor: pointer;">
+                    
+                    <i class="bi bi-clock" id="btn_remover" style="font-size: 25px; margin-left: 10px;"></i>
                     <h1>PAINEL DE CARREGAMENTO</h1>
                     <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
                 </div>
