--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,10 @@
         <section class="terceiro">
             <div class="painel">
                 <div class="logo">
-                    
-                    <i class="bi bi-clock" id="btn_remover" style="font-size: 25px; margin-left: 10px;"></i>
+                    <div class="relogio">
+                        <i class="bi bi-clock" id="btn_remover"></i>
+                        <p id="hora"></p>
+                    </div>  
                     <h1>PAINEL DE CARREGAMENTO</h1>
                     <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
                 </div>
