--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,12 @@
 
                 <form action="/remover" method="post" id="remover" class="fechar" >
                     <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" style="width: 40px;" >
-                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;" value="{{clt}}">
+                    <select name="clt" id="clt" style="height: 25px; font-size: 11px; border-radius: 5px; width: 55px;">
+                        <option value="">--CLT--</option>
+                        <option value="C">C</option>
+                        <option value="E">E</option>
+                        <option value="T">T</option>
+                    </select>
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;" >
                     <input type="text" name="dest" id="dest" placeholder="destino" style="width: 200px;">
                     <select name="conf" id="conf" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
@@ -69,10 +74,27 @@
                 </form>
                
                 <form action="/cadastrar" method="post" id="adicionar" class="fechar">
-                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
+                    <select name="clt" id="clt" style="height: 25px; font-size: 11px; border-radius: 5px; width: 55px;">
+                        <option value="">--CLT--</option>
+                        <option value="C">C</option>
+                        <option value="E">E</option>
+                        <option value="T">T</option>
+                    </select>
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
                     <input type="text" name="dest" id="dest" placeholder="destino" style="width: 280px;">
-                    <input type="text" name="conf" id="conf" placeholder="conferente" style="width: 100px;">
+                    <select name="conf" id="conf" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                        <option value="">--Conferente--</option>
+                        <option value="GERAL">GERAL</option>
+                        <option value="ARIMATEIA">ARIMATEIA</option>
+                        <option value="CASE">CASE</option>
+                        <option value="CASSIO">CASSIO</option>
+                        <option value="EMERSON">EMERSON</option>
+                        <option value="FERNANDO">FERNANDO</option>
+                        <option value="RAIONE">RAIONE</option>
+                        <option value="FABIO">FABIO</option>
+                        <option value="VICENTE">VICENTE</option>
+                        <option value="ZE_CARLOS">ZE CARLOS</option>
+                    </select>
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
                     <input type="submit" name="add" id="add" style="width: 30px;" value="+">
