--- a/templates/index.html
+++ b/templates/index.html
@@ -107,15 +107,15 @@
             <table>
                 <thead>
                     <tr>
-                        <th> SEQ <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> CLT <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> MOTORISTA <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> DESTINO <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> CONFERENTE <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> PLACA <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> CUB <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> STATUS <span class="icon-arrow">&UpArrow;</span></th>
-                        <th> IMG <span class="icon-arrow">&UpArrow;</span></th>
+                        <th style="width: 40px;"> SEQ </th>
+                        <th > CLT </th>
+                        <th> MOTORISTA </th>
+                        <th> DESTINO </th>
+                        <th> CONFERENTE </th>
+                        <th  > PLACA </th>
+                        <th style="width: 40px;"> CUB </th>
+                        <th> STATUS </th>
+                        <th> IMG </th>
                     </tr>
                 </thead>
                 <tbody>
