--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
                 
                     <tr>
                         <td class="seq"> {{loop.index}} </td>
-                        <td> {{item[1]}} </td>
+                        <td style="color: #0000ff;"> {{item[1]}} </td>
                         <td> {{item[2]}} </td>
                         <td> {{item[3]}} </td>
                         <td> {{item[4]}}</td>
