--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                         <option value="RAIONE">RAIONE</option>
                         <option value="FABIO">FABIO</option>
                         <option value="VICENTE">VICENTE</option>
-                        <option value="ZE_CARLOS">ZE CARLOS</option>
+                        <option value="ZE CARLOS">ZE CARLOS</option>
                     </select>
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
@@ -125,7 +125,7 @@
                         <td class="seq"> {{loop.index}} </td>
                         <td style="color: #0000ff;"> {{item[1]}} </td>
                         <td> {{item[2]}} </td>
-                        <td> {{item[3]}} </td>
+                        <td style="color: #0000ff;"> {{item[3]}} </td>
                         <td> {{item[4]}}</td>
                         <td> {{item[5]}}</td>
                         <td>{{item[6]}}</td>
@@ -147,13 +147,14 @@
                 <span>{{Dgrafico[0]}}</span>
             </div>
             <div class="total">
-                <p>Claudino</p>
-                <span>{{Dgrafico[17]}} <i class="bi bi-truck"></i></span>
-            </div>
-            <div class="total">
                 <p>Terceiro</p>
                 <span>{{Dgrafico[16]}} <i class="bi bi-truck"></i></span>
             </div>
+            <div class="total">
+                <p>Claudino</p>
+                <span>{{Dgrafico[17]}} <i class="bi bi-truck"></i></span>
+            </div>
+            
             <div class="total">
                 <p>Escoamento</p>
                 <span>{{Dgrafico[18]}} <i class="bi bi-truck"></i></span>
