--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                         <option value="">--Estatus--</option>
                         <option value="AGUARD">AGUARD</option>
                         <option value="CARREGANDO">CARREGANDO</option>
-                        <option value="AGUARD_FAT">AGUARD FAT</option>
+                        <option value="AGUARD FAT">AGUARD FAT</option>
                         <option value="FATURANDO">FATURANDO</option>
                         <option value="CONCLUÍDO">CONCLUÍDO</option>
                         <option value="ADIADO">ADIADO</option>
@@ -93,7 +93,7 @@
                         <option value="RAIONE">RAIONE</option>
                         <option value="FABIO">FABIO</option>
                         <option value="VICENTE">VICENTE</option>
-                        <option value="ZE_CARLOS">ZE CARLOS</option>
+                        <option value="ZE CARLOS">ZE CARLOS</option>
                     </select>
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
