--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="{{Atualizacao}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Carregamento</title>
     <!--link do bostrep-->
@@ -204,7 +205,7 @@
         <p id="dez">{{graficoMes[11]}}</p>
 
     </div>
-
     <script src="/static/script.js"></script>
 </body>
+
 </html>
