--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="30">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Carregamento</title>
     <!--link do bostrep-->
@@ -68,7 +69,7 @@
                         <option value="ADIADO">ADIADO</option>
                         <option value="CANCELADO">CANCELADO</option>
                     </select>
-                    <input type="submit" id="Atualizar" name="add" style="width: 30px;" value="-"
+                    <input type="submit" name="add" style="width: 30px;" value="-"
                     onclick="return confirm('Deseja Realmente Excluir ou Alterar Este Carrego ')"
                     >
                 </form>
