--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                         <option value="CARREGANDO">CARREGANDO</option>
                         <option value="AGUARD FAT">AGUARD FAT</option>
                         <option value="FATURANDO">FATURANDO</option>
-                        <option value="CONCLUÍDO">CONCLUÍDO</option>
+                        <option value="CONCLUÍDO" selected>CONCLUÍDO</option>
                         <option value="ADIADO">ADIADO</option>
                         <option value="CANCELADO">CANCELADO</option>
                     </select>
