--- a/static/style.css
+++ b/static/style.css
@@ -324,11 +324,7 @@ tbody tr.hide td img {
 
 /* ####### FIM DO ESTILO PAINEL GRÁFICO  ########*/
 
-@media (max-width: 1000px) {
-    td:not(:first-of-type) {
-        min-width: 12.1rem;
-    }
-}
+
 
 thead th span.icon-arrow {
     display: inline-block;
@@ -384,9 +380,47 @@ thead th span.icon-arrow {
     width: 2rem;
     height: auto;
 }
+
+
 /* ####### FIM DO ESTILO TABELA  ########*/
-/* ####### FIM DO ESTILO TABELA  ########*/
+
+
+/* ####### MIDIA QUERY  ########*/
+
+@media (max-width: 1000px) {
+    td:not(:first-of-type) {
+        min-width: 12.1rem;
+    }
+}
+
+
+@media (min-width: 600px) and (max-width: 1100px) {
+        table, th, td {
+        border-collapse: collapse;
+        padding: 0.04rem;
+        text-align: left;
+        font-size: 0.6rem;
+        font-weight: bold;
+    }
+
+    .relogio {
+        gap: 10px;
+        font-size: 20px;
+    }
+
+    .terceiro {
+        font-size: 0.8rem;
+    }
+
+    .terceiro .painel form {
+        margin-bottom: 5px;
+    }
+
+    .terceiro .painel form input{
+        height: 20px;
+        
+    }
 
 
 
-
+}
