--- a/templates/index.html
+++ b/templates/index.html
@@ -35,16 +35,16 @@
                 </div>
 
                 <form action="/remover" method="post" id="remover" class="fechar" >
-                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" style="width: 40px;" >
-                    <select name="clt" id="clt" style="height: 25px; font-size: 11px; border-radius: 5px; width: 55px;">
+                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" >
+                    <select name="clt" id="clt">
                         <option value="">--CLT--</option>
                         <option value="C">C</option>
                         <option value="E">E</option>
                         <option value="T">T</option>
                     </select>
-                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 200px; font-size: 11px;" >
-                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 200px;">
-                    <select name="conf" id="conf" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" >
+                    <input type="text" name="dest" id="dest" placeholder="destino">
+                    <select name="conf" id="conf">
                         <option value="">--Conferente--</option>
                         <option value="GERAL">GERAL</option>
                         <option value="ARIMATEIA">ARIMATEIA</option>
@@ -57,9 +57,9 @@
                         <option value="VICENTE">VICENTE</option>
                         <option value="ZE CARLOS">ZE CARLOS</option>
                     </select>
-                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
-                    <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
-                    <select name="opcoes" id="opcoes" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                    <input type="text" name="placa" id="placa" placeholder="placa">
+                    <input type="text" name="cub" id="cub" placeholder="cub">
+                    <select name="opcoes" id="opcoes">
                         <option value="">--Estatus--</option>
                         <option value="AGUARD">AGUARD</option>
                         <option value="CARREGANDO">CARREGANDO</option>
