--- a/templates/index.html
+++ b/templates/index.html
@@ -75,15 +75,15 @@
                 </form>
                
                 <form action="/cadastrar" method="post" id="adicionar" class="fechar">
-                    <select name="clt" id="clt" style="height: 25px; font-size: 11px; border-radius: 5px; width: 55px;">
+                    <select name="clt" id="clt">
                         <option value="">--CLT--</option>
                         <option value="C">C</option>
                         <option value="E">E</option>
                         <option value="T">T</option>
                     </select>
-                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
-                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 280px;">
-                    <select name="conf" id="conf" style="height: 25px; font-size: 11px; border-radius: 5px; width: 110px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista">
+                    <input type="text" name="dest" id="dest" placeholder="destino">
+                    <select name="conf" id="conf">
                         <option value="">--Conferente--</option>
                         <option value="GERAL">GERAL</option>
                         <option value="ARIMATEIA">ARIMATEIA</option>
@@ -96,8 +96,8 @@
                         <option value="VICENTE">VICENTE</option>
                         <option value="ZE CARLOS">ZE CARLOS</option>
                     </select>
-                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
-                    <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
+                    <input type="text" name="placa" id="placa" placeholder="placa">
+                    <input type="text" name="cub" id="cub" placeholder="cub">
                     <input type="submit" name="add" id="add" style="width: 30px;" value="+">
                 </form>
                
