--- a/static/style.css
+++ b/static/style.css
@@ -444,10 +444,34 @@ thead th span.icon-arrow {
         margin-bottom: 5px;
     }
 
-    .terceiro .painel form input{
-        height: 20px;
-        
-    }
+    /* INPUTS REMOVER*/
+
+#num_carrego, #cub{
+    width: 40px
+}
+
+#clt {
+    width: 50px;
+    height: 25px;
+    font-size: 11px;
+    border-radius: 5px;
+}
+
+#mot, #dest {
+    width: 200px;
+    
+}
+
+#conf, #opcoes {
+    height: 25px;
+    width: 110px;
+    font-size: 11px;
+    border-radius: 5px;
+}
+
+#placa {
+    width: 80px;
+}
 
 
 
