--- a/templates/index.html
+++ b/templates/index.html
@@ -108,13 +108,13 @@
             <table>
                 <thead>
                     <tr>
-                        <th style="width: 40px;"> SEQ </th>
-                        <th > CLT </th>
+                        <th style="width: 40px;" class="seq"> SEQ </th>
+                        <th class="seq"> CLT </th>
                         <th> MOTORISTA </th>
                         <th> DESTINO </th>
                         <th> CONFERENTE </th>
                         <th  > PLACA </th>
-                        <th style="width: 40px;"> CUB </th>
+                        <th style="width: 40px;" class="seq"> CUB </th>
                         <th> STATUS </th>
                         <th> IMG </th>
                     </tr>
