--- a/static/style.css
+++ b/static/style.css
@@ -290,7 +290,7 @@ tbody tr.hide td img {
 
 
 .grafico .cubtotal .total{
-    width: 85px;
+    width: 100%;
     height: 45px;
     display: flex;
     flex-direction: column;
@@ -324,6 +324,7 @@ tbody tr.hide td img {
     align-items: center;
     box-shadow: 3px 3px 3px #757575;
     font-weight: bold;
+    
   }
 
   .chart-container p {
@@ -551,6 +552,7 @@ thead th span.icon-arrow {
     body {
     display: flex;
     flex-direction: column;
+    
     }
 
     table, th, td {
@@ -558,6 +560,11 @@ thead th span.icon-arrow {
         padding: 0.03rem;
         text-align: left;
         font-size: 0.4rem;
+        
+    }
+
+    .table__body {
+        max-height: calc(60% - 1.6rem);
         
     }
 
@@ -590,7 +597,7 @@ thead th span.icon-arrow {
     td img {
         width: 20px;
         height: 20px;
-        margin-right: .1rem;
+        margin-right: .1.2rem;
         border-radius: 50%;
         
     }
@@ -641,15 +648,36 @@ thead th span.icon-arrow {
     .status, .status.concluido, .status.cancelado, .status.adiado{
         font-size: 0.3rem;
         padding: .1rem 0;
-        width: 50PX;
+        width: 40PX;
     }
 
 
     .grafico {
-    width: 100%;
-    display: flex;
-    
-    
+        width: 100%;
+        display: flex;
+        
+    }
+
+    .grafico .cubtotal .total span{
+        font-size: 0.7rem;
+    }
+
+    .grafico .cubtotal .total i, p {
+        font-size: 0.7rem;
+    }
+
+    .chart-container {
+        margin-bottom: 5px;
+    }
+
+    .chart-container p {
+    font-size: 0.7rem;
+    }
+
+    #chartdiv, #chartdiv2, #chartdiv3 {
+        width: 100%;
+        height: 70%;
+        font-size: 0.5rem;
     }
 
 
