--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
                     {% for item in registro %}
                 
                     <tr>
-                        <td class="seq"> {{loop.index}} </td>
+                        <td > {{loop.index}} </td>
                         <td style="color: #0000ff;"> {{item[1]}} </td>
                         <td> {{item[2]}} </td>
                         <td style="color: #0000ff;"> {{item[3]}} </td>
                         <td> {{item[4]}}</td>
                         <td> {{item[5]}}</td>
-                        <td>{{item[6]}}</td>
+                        <td> {{item[6]}}</td>
                         <td><p class="status {{item[7]}}">{{item[8]}}</p></td>
                         <td> <img src="{{item[9]}}" alt=""></td>
                     </tr>
