--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th class="seq"> SEQ </th>
+                        <th class="seq" id="sequencia"> SEQ </th>
                         <th class="seq"> CLT </th>
                         <th> MOTORISTA </th>
                         <th> DESTINO </th>
