--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                         <option value="ADIADO">ADIADO</option>
                         <option value="CANCELADO">CANCELADO</option>
                     </select>
-                    <input type="submit" name="add" style="width: 30px;" value="-"
+                    <input type="submit" name="add" style="width: 30px;" value="OK"
                     onclick="return confirm('Deseja Realmente Excluir ou Alterar Este Carrego ')"
                     >
                 </form>
