--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
                     {% for item in registro %}
                 
                     <tr>
-                        <td > {{loop.index}} </td>
+                        <td style="padding-left: 15px;"> {{loop.index}} </td>
                         <td style="color: #0000ff;"> {{item[1]}} </td>
                         <td> {{item[2]}} </td>
                         <td style="color: #0000ff;"> {{item[3]}} </td>
