--- a/static/style2.css
+++ b/static/style2.css
@@ -24,12 +24,31 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    box-shadow: 0.5px 0.5px 3px rgba(0,0,0,0.5);
+    box-shadow: 0 0.5rem 1rem rgb(0, 0, 0, 0.1);
 
 }
 
-.container .modal, form {
+.container .modal form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
     
+}
+
+.container .modal form input, select {
+    width: 100%;
+    background: none;
+    margin-bottom: 10px;
+    height: 30px;
+    border: 0;
+    border-bottom: 0.2px solid #4881fce6;
+    
+}
+
+.container .modal form button {
+    width: 100%;
 }
