--- a/templates/add.html
+++ b/templates/add.html
@@ -33,7 +33,7 @@
                 </select>
                 <input type="text" name="placa" id="placa" placeholder="placa">
                 <input type="text" name="cub" id="cub" placeholder="cub">
-                <input type="submit" name="add" id="add" style="width: 30px;" value="+">
+                <button type="submit" id="add">Adicionar</button>
             </form>
         </div>
     </div>
