--- a/static/style.css
+++ b/static/style.css
@@ -80,46 +80,12 @@ body {
     
 }
 
-.terceiro .painel form {
-    margin-bottom: 5px;
-}
-
-.terceiro .painel form input{
-    height: 25px;
+.btn_form {
     border: none;
-    border-radius: 3px;
-    padding-left: 3px;
-    border: 1px solid var(--azul3);
+    background: none;
 }
 
-/* INPUTS REMOVER*/
 
-#num_carrego, #cub{
-    width: 40px
-}
-
-#clt {
-    width: 50px;
-    height: 25px;
-    font-size: 11px;
-    border-radius: 5px;
-}
-
-#mot, #dest {
-    width: 200px;
-    
-}
-
-#conf, #opcoes {
-    height: 25px;
-    width: 110px;
-    font-size: 11px;
-    border-radius: 5px;
-}
-
-#placa {
-    width: 80px;
-}
 
 /* ####### ESTILO TABELA  ########*/
 
