--- a/templates/index.html
+++ b/templates/index.html
@@ -31,76 +31,12 @@
                         <p id="hora"></p>
                     </div>  
                     <h1>PAINEL DE CARREGAMENTO</h1>
-                    <img src="/static/socimol.png" alt=""style="cursor: pointer;" id="btn_adicionar">
+                    <form action="/adicionar" method="post">
+                        <button type="submit" class="btn_form">
+                            <img src="/static/socimol.png" alt="" id="btn_adicionar">
+                        </button>
+                    </form>
                 </div>
-
-                <form action="/remover" method="post" id="remover" class="fechar" >
-                    <input type="text" name="num_carrego" id="num_carrego" placeholder="Id" >
-                    <select name="clt" id="clt">
-                        <option value="">--CLT--</option>
-                        <option value="C">C</option>
-                        <option value="E">E</option>
-                        <option value="T">T</option>
-                    </select>
-                    <input type="text" name="mot" id="mot" placeholder="motorista" >
-                    <input type="text" name="dest" id="dest" placeholder="destino">
-                    <select name="conf" id="conf">
-                        <option value="">--Conferente--</option>
-                        <option value="GERAL">GERAL</option>
-                        <option value="ARIMATEIA">ARIMATEIA</option>
-                        <option value="CASE">CASE</option>
-                        <option value="CASSIO">CASSIO</option>
-                        <option value="EMERSON">EMERSON</option>
-                        <option value="FERNANDO">FERNANDO</option>
-                        <option value="RAIONE">RAIONE</option>
-                        <option value="FABIO">FABIO</option>
-                        <option value="VICENTE">VICENTE</option>
-                        <option value="ZE CARLOS">ZE CARLOS</option>
-                    </select>
-                    <input type="text" name="placa" id="placa" placeholder="placa">
-                    <input type="text" name="cub" id="cub" placeholder="cub">
-                    <select name="opcoes" id="opcoes">
-                        <option value="">--Estatus--</option>
-                        <option value="AGUARD">AGUARD</option>
-                        <option value="CARREGANDO">CARREGANDO</option>
-                        <option value="AGUARD FAT">AGUARD FAT</option>
-                        <option value="FATURANDO">FATURANDO</option>
-                        <option value="CONCLUÍDO" selected>CONCLUÍDO</option>
-                        <option value="ADIADO">ADIADO</option>
-                        <option value="CANCELADO">CANCELADO</option>
-                    </select>
-                    <input type="submit" name="add" style="width: 30px;" value="OK"
-                    onclick="return confirm('Deseja Realmente Excluir ou Alterar Este Carrego ')"
-                    >
-                </form>
-               
-                <form action="/cadastrar" method="post" id="adicionar" class="fechar">
-                    <select name="clt" id="clt">
-                        <option value="">--CLT--</option>
-                        <option value="C">C</option>
-                        <option value="E">E</option>
-                        <option value="T">T</option>
-                    </select>
-                    <input type="text" name="mot" id="mot" placeholder="motorista">
-                    <input type="text" name="dest" id="dest" placeholder="destino">
-                    <select name="conf" id="conf">
-                        <option value="">--Conferente--</option>
-                        <option value="GERAL">GERAL</option>
-                        <option value="ARIMATEIA">ARIMATEIA</option>
-                        <option value="CASE">CASE</option>
-                        <option value="CASSIO">CASSIO</option>
-                        <option value="EMERSON">EMERSON</option>
-                        <option value="FERNANDO">FERNANDO</option>
-                        <option value="RAIONE">RAIONE</option>
-                        <option value="FABIO">FABIO</option>
-                        <option value="VICENTE">VICENTE</option>
-                        <option value="ZE CARLOS">ZE CARLOS</option>
-                    </select>
-                    <input type="text" name="placa" id="placa" placeholder="placa">
-                    <input type="text" name="cub" id="cub" placeholder="cub">
-                    <input type="submit" name="add" id="add" style="width: 30px;" value="+">
-                </form>
-               
             </div>
         </section>
         
@@ -130,7 +66,13 @@
                         <td> {{item[4]}}</td>
                         <td> {{item[5]}}</td>
                         <td> {{item[6]}}</td>
-                        <td><p class="status {{item[7]}}">{{item[8]}}</p></td>
+                        <td>
+                            <form action="/update/{{item[0]}}" method="post">
+                                <button type="submit" class="btn_form">
+                                    <p class="status {{item[7]}}">{{item[8]}}</p>
+                                </button>
+                            </form>
+                        </td>
                         <td> <img src="{{item[9]}}" alt=""></td>
                     </tr>
                         
