--- a/templates/update.html
+++ b/templates/update.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style2.css">
     <title>Update</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="modal">
+            <form action="/alterar/{{lista[0][0]}}" method="post" id="adicionar" class="fechar">
+                <select name="clt" id="clt">
+                    <option value="{{lista[0][1]}}">{{lista[0][1]}}</option>
+                    <option value="C">C</option>
+                    <option value="E">E</option>
+                    <option value="T">T</option>
+                </select>
+                <input type="text" name="mot" id="mot" placeholder="motorista" value="{{lista[0][2]}}">
+                <input type="text" name="dest" id="dest" placeholder="destino" value="{{lista[0][3]}}">
+                <select name="conf" id="conf">
+                    <option value="{{lista[0][4]}}">{{lista[0][4]}}</option>
+                    <option value="GERAL">GERAL</option>
+                    <option value="ARIMATEIA">ARIMATEIA</option>
+                    <option value="CASE">CASE</option>
+                    <option value="CASSIO">CASSIO</option>
+                    <option value="EMERSON">EMERSON</option>
+                    <option value="FERNANDO">FERNANDO</option>
+                    <option value="RAIONE">RAIONE</option>
+                    <option value="FABIO">FABIO</option>
+                    <option value="VICENTE">VICENTE</option>
+                    <option value="ZE CARLOS">ZE CARLOS</option>
+                </select>
+                <input type="text" name="placa" id="placa" placeholder="placa" value="{{lista[0][5]}}">
+                <input type="text" name="cub" id="cub" placeholder="cub" value="{{lista[0][6]}}">
+                <select name="opcoes" id="opcoes">
+                    <option value="{{lista[0][8]}}">{{lista[0][8]}}</option>
+                    <option value="AGUARD">AGUARD</option>
+                    <option value="CARREGANDO">CARREGANDO</option>
+                    <option value="CONCLUÍDO">CONCLUÍDO</option>
+                    <option value="ADIADO">ADIADO</option>
+                    <option value="CANCELADO">CANCELADO</option>
+                </select>
+                <button type="submit" id="add">Alterar</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
