--- a/templates/index.html
+++ b/templates/index.html
@@ -27,13 +27,13 @@
             <div class="painel">
                 <div class="logo">
                     <div class="relogio">
-                        <i class="bi bi-clock" id="btn_remover"></i>
+                        <i class="bi bi-clock"></i>
                         <p id="hora"></p>
                     </div>  
                     <h1>PAINEL DE CARREGAMENTO</h1>
                     <form action="/adicionar" method="post">
                         <button type="submit" class="btn_form">
-                            <img src="/static/socimol.png" alt="" id="btn_adicionar">
+                            <img src="/static/socimol.png" alt="">
                         </button>
                     </form>
                 </div>
