--- a/templates/add.html
+++ b/templates/add.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="modal">
+            <h2 style="color: blue; margin-top: 10px;">Adicionar Carrego</h2>
             <form action="/cadastrar" method="post" id="adicionar" class="fechar">
                 <select name="clt" id="clt">
                     <option value="">--CLT--</option>
