--- a/templates/delete.html
+++ b/templates/delete.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="modal">
-            <form action="/cadastrar" method="post" id="adicionar" class="fechar">
+            <form action="/delete" method="post" id="adicionar" class="fechar">
                 <select name="clt" id="clt">
                     <option value="">--CLT--</option>
                     <option value="C">C</option>
